--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
+        android:fontFamily="@font/autour_one"
         android:text="@string/total_money_saved"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
