--- a/app/src/main/res/layout/activity_small_notebook.xml
+++ b/app/src/main/res/layout/activity_small_notebook.xml
@@ -36,9 +36,11 @@
         android:layout_width="334dp"
         android:layout_height="44dp"
 
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/autour_one"
         android:text="@string/small_notebook"
         android:textAlignment="center"
-        android:textSize="36sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +52,7 @@
         android:layout_width="330dp"
         android:layout_height="79dp"
         android:layout_marginTop="468dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/add_item"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
@@ -63,9 +66,10 @@
         android:layout_marginTop="92dp"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="@font/autour_one"
         android:hint="@string/money_spent_on_grocery"
         android:inputType="textPersonName"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,15 +93,16 @@
         android:layout_width="330dp"
         android:layout_height="45dp"
         android:layout_marginTop="152dp"
+        android:autofillHints=""
         android:ems="10"
+        android:fontFamily="@font/autour_one"
         android:hint="@string/amount_spent_10"
         android:inputType="number"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
