--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -4,33 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFEB3B"
+    android:background="@drawable/notebook_paper_tanned_out_texture"
     tools:context=".ExpensesActivity">
 
     <TextView
         android:id="@+id/Expenses_textview"
-        android:layout_width="164dp"
-        android:layout_height="57dp"
+        android:layout_width="169dp"
+        android:layout_height="75dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/autour_one"
         android:gravity="center"
         android:text="Expenses"
-        android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/back_btn"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="564dp"
+        android:layout_width="116dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="584dp"
+        android:backgroundTint="#10000000"
+        android:fontFamily="@font/bowlby_one_sc"
         android:onClick="goTo_BigNotebookActivity"
         android:text="Back"
+        android:textColor="#404040"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
+        app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,35 +40,24 @@
         android:id="@+id/sumOfDaysList"
         android:layout_width="357dp"
         android:layout_height="256dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="92dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/clear_btn"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="564dp"
+        android:layout_width="161dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="580dp"
+        android:backgroundTint="#10000000"
+        android:fontFamily="@font/bowlby_one_sc"
         android:onClick="clear"
         android:text="Clear ALl"
+        android:textColor="#404040"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.909"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/descriptionText"
-        android:layout_width="357dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="84dp"
-        android:fontFamily="@font/autour_one"
-        android:gravity="center"
-        android:text="List of Total spent on Day"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintHorizontal_bias="0.812"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
